mainly ParticleMotion improvements and CQI