@@ -9,15 +9,15 @@ import ch.njol.skript.lang.Expression;
 import ch.njol.skript.lang.ExpressionType;
 import ch.njol.skript.lang.SkriptParser;
 import ch.njol.skript.lang.util.SimpleExpression;
+import ch.njol.skript.util.Direction;
 import ch.njol.util.Kleenean;
 import com.sovdee.skriptparticles.shapes.Shape;
 import org.bukkit.Location;
 import org.bukkit.event.Event;
 import org.checkerframework.checker.nullness.qual.NonNull;
-import org.jetbrains.annotations.Nullable;
+import org.checkerframework.checker.nullness.qual.Nullable;
 
 import java.util.ArrayList;
-import java.util.stream.Collectors;
 
 @Name("Shape Locations")
 @Description({
@@ -35,7 +35,7 @@ import java.util.stream.Collectors;
 public class ExprShapeLocations extends SimpleExpression<Location> {
 
     static {
-        Skript.registerExpression(ExprShapeLocations.class, Location.class, ExpressionType.COMBINED, "[particle] locations of %shapes% [[centered] %direction% %location%]");
+        Skript.registerExpression(ExprShapeLocations.class, Location.class, ExpressionType.COMBINED, "[particle] locations of %shapes% [[centered] [%-direction%] %location%]");
     }
 
     private Expression<Shape> shapeExpr;
@@ -44,23 +44,26 @@ public class ExprShapeLocations extends SimpleExpression<Location> {
     @Override
     public boolean init(Expression<?>[] exprs, int matchedPattern, Kleenean isDelayed, SkriptParser.ParseResult parseResult) {
         shapeExpr = (Expression<Shape>) exprs[0];
-        locationExpr = (Expression<Location>) exprs[1];
+        locationExpr = (Expression<Location>) exprs[2];
+        if (exprs[1] != null)
+            locationExpr = Direction.combine((Expression<? extends Direction>) exprs[1], locationExpr);
         return true;
     }
 
     @Override
     @Nullable
-    protected Location[] get(@NonNull Event event) {
+    protected Location[] get(Event event) {
         Shape[] shapes = shapeExpr.getAll(event);
-        if (shapes.length == 0) return null;
+        if (shapes.length == 0) return new Location[0];
 
-        Location center = locationExpr.getSingle(event);
-        if (center == null) return null;
+        @Nullable Location center = locationExpr.getSingle(event);
+
+        if (center == null) return new Location[0];
 
 
         ArrayList<Location> locations = new ArrayList<>();
         for (Shape shape : shapes) {
-            locations.addAll(shape.getPoints().stream().map(point -> center.clone().add(point)).collect(Collectors.toList()));
+            locations.addAll(shape.getPoints().stream().map(point -> center.clone().add(point)).toList());
         }
         return locations.toArray(new Location[0]);
     }
